# 6DOF

./: .gitignore  6DOF.code-workspace  CMakeLists.txt  astyleHelp.txt  envSetup.sh  envSetup.sh~  test_new
Module/: CMakeLists.txt  ProcModule.cpp  ProcModule.h
Runner/: CMakeLists.txt  runner.cpp  runner.h
SW/: CMakeLists.txt
SW/Algorithms/: CMakeLists.txt
SW/Algorithms/Autopilot/: AutopilotComponent.cpp  AutopilotComponent.h  AutopilotTypes.h  CMakeLists.txt  HighRateAutopilotComponent.cpp  HighRateAutopilotComponent.h  HighRateAutopilotTypes.h  LowRateAutopilotComponent.cpp  LowRateAutopilotComponent.h  LowRateAutopilotTypes.h
SW/Algorithms/Autopilot/Algorithm/: AutopilotAlgorithm.cpp  AutopilotAlgorithm.h  AutopilotConstants.h  CMakeLists.txt  HighRateAutopilotAlgorithm.cpp  HighRateAutopilotAlgorithm.h  LowRateAutopilotAlgorithm.cpp  LowRateAutopilotAlgorithm.h
SW/Algorithms/Autopilot/Algorithm/Shared/: ApGains.cpp  ApGains.h  CMakeLists.txt
SW/Algorithms/Autopilot/Algorithm/Shared/Filters/: CMakeLists.txt  FilterP.cpp  FilterP.h  FilterQR.cpp  FilterQR.h  FilterRollDC.cpp  FilterRollDC.h  HighRateDigitalFilter2.cpp  HighRateDigitalFilter2.h  HighRateDigitalFilter4.cpp  HighRateDigitalFilter4.h  HighRateDigitalFilterBase.h  LowRateDigitalFilterBase.h  LowRateDigitalFilterComp.cpp  LowRateDigitalFilterComp.h  LowRateDigitalFilterLeadLag.cpp  LowRateDigitalFilterLeadLag.h  LowRateDigitalFilterLowPass2.cpp  LowRateDigitalFilterLowPass2.h  LowRateDigitalFilterNotch2.cpp  LowRateDigitalFilterNotch2.h
SW/Algorithms/Guidance/: CMakeLists.txt  GuidanceComponent.cpp  GuidanceComponent.h  GuidanceTypes.h
SW/Algorithms/Guidance/Algorithm/: CMakeLists.txt  GuidanceAlgorithm.cpp  GuidanceAlgorithm.h
SW/Algorithms/Navigation/: CMakeLists.txt  NavigationComponent.cpp  NavigationComponent.h  NavigationTypes.h
SW/Algorithms/Navigation/Algorithm/: CMakeLists.txt  NavigationAlgorithm.cpp  NavigationAlgorithm.h
SW/Common/: CMakeLists.txt
SW/Common/Messages/: AeroMsg.cpp  AeroMsg.h  AutopilotMsg.h  CMakeLists.txt  CtrlSurfMsg.h  EngineMsg.cpp  EngineMsg.h  EomMsg.h  GravityMsg.h  GuidanceMsg.h  ImuMsg.h  MassPropMsg.h  MessageGenerator.py  NavMsg.h  test.xml  test1Msg.cpp  test1Msg.h  test2Msg.cpp  test2Msg.h  test3Msg.cpp  test3Msg.h
SW/Common/Tables/: CMakeLists.txt  Table.h  Table0D.h  Table1D.h  Table2D.h  Table3D.h  Table4D.h  Table5D.h
SW/Common/Tables/Aero/: AltitudeTables.h  CMakeLists.txt
SW/Common/Tables/AircraftProperties/: CMakeLists.txt  PhysicalProperties.h
SW/Common/Tables/EarthModels/: CMakeLists.txt  WGS84.h
SW/Controller/: CMakeLists.txt  Controller.cpp  Controller.h
SW/Messages/: AeroMsg.h  AutopilotMsg.h  CMakeLists.txt  CtrlSurfMsg.h  EngineMsg.h  EomMsg.h  GRAMMsg.h  GravityMsg.h  ImuMsg.h  (+6 more)
SW/Module/: CMakeLists.txt  ProcModule.cpp  ProcModule.h
SW/Navigation/: CMakeLists.txt  Navigation.cpp  Navigation.h
SW/Serialization/: AeroDataSerialization.h  CMakeLists.txt  EngineDataSerialization.h  EomDataSerialization.h  GRAMDataSerialization.h  GravityDataSerialization.h  ImuDataSerialization.h  LowRateApSerialization.h  MassPropDataSerialization.h  NavDataSerialization.h
Sim/: CMakeLists.txt  bin  lib
Sim/Encoder/: CMakeLists.txt  Encoder.cpp  Encoder.h
Sim/Environment/: CMakeLists.txt
Sim/Environment/Aero/: Aero.cpp  Aero.h  AeroComponent.cpp  AeroComponent.h  AeroTypes.h  CMakeLists.txt
Sim/Environment/Aero/Algorithm/: Aero.cpp  Aero.h  CMakeLists.txt
Sim/Environment/GRAM/: CMakeLists.txt  EarthGRAM.cpp  EarthGRAM.h  GRAMComponent.cpp  GRAMComponent.h  GRAMTypes.h
Sim/Environment/Gravity/: CMakeLists.txt  GravityComponent.cpp  GravityComponent.h  GravityTypes.h
Sim/Environment/Gravity/Algorithm/: CMakeLists.txt  Gravity.cpp  Gravity.h
Sim/Environment/MassProperties/: CMakeLists.txt  MassProperties.cpp  MassProperties.h  MassPropertiesComponent.cpp  MassPropertiesComponent.h  MassPropertiesTypes.h
Sim/Environment/MassProperties/Algorithm/: CMakeLists.txt  MassProperties.cpp  MassProperties.h
Sim/Environment/eom/: CMakeLists.txt  EomComponent.cpp  EomComponent.h  EomTypes.h  eom.cpp  eom.h  eomGetters.cpp
Sim/Environment/eom/Algorithm/: CMakeLists.txt  eom.cpp  eom.h
Sim/Hardware/: CMakeLists.txt
Sim/Hardware/ControlSurfaces/: Actuator.cpp  Actuator.h  CMakeLists.txt  ControlSurfaces.cpp  ControlSurfaces.h  ControlSurfacesComponent.cpp  ControlSurfacesComponent.h  ControlSurfacesTypes.h
Sim/Hardware/ControlSurfaces/Algorithm/: Actuation.cpp  Actuation.h  CMakeLists.txt  ControlSurfaces.cpp  ControlSurfaces.h
Sim/Hardware/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineComponent.cpp  EngineComponent.h  EngineTypes.h
Sim/Hardware/Engine/Algorithm/: CMakeLists.txt  engine.cpp  engine.h
Sim/Hardware/IMU/: CMakeLists.txt  IMU.cpp  IMU.h  IMUTypes.h  ImuComponent.cpp  ImuComponent.h  ImuTypes.h
Sim/Hardware/IMU/Algorithm/: CMakeLists.txt  Imu.cpp  Imu.h
Sim/IMU/: CMakeLists.txt  imu  imu.cpp  imu.h
Sim/Motor/: CMakeLists.txt  Motor.cpp  Motor.h
Sim/Runner/: CMakeLists.txt  runit.py  runner.cpp  runner.h  spice.txt
Sim/TimeManager/: CMakeLists.txt  TimeMngr.cpp  TimeMngr.h
Sim/World/: 6DOFSimulation.cpp  6DOFSimulation.h  AircraftEntity.cpp  AircraftEntity.h  CMakeLists.txt
Sim/config/: exec
Sim/eom/: CMakeLists.txt  EomComponent.cpp  EomComponent.h  eom  eom.cpp  eom.h
Sim/run/: .gitignore
Sim/tools/matlab/: aeroCoefs.m  plotEom.asv  plotEom.m  testMathlib.asv  testMathlib.m
Sim/tools/matlab/Actuators/: actuationModel.slx  actuationModel.slx.autosave  actuationModel.slxc  actuatorControlOptimization.m  costFunc.m  plotCtrlSurfs.m
Sim/tools/matlab/Actuators/slprj/sim/varcache/actuationModel/: checksumOfCache.mat  varInfo.mat
Sim/tools/matlab/Actuators/slprj/sim/varcache/actuationModel/tmwinternal/: simulink_cache.xml
Sim/tools/matlab/Validation/eom/: EOM_ECEF_6DOF.slx  verifyEOM.m
Sim/tools/matlab/Validation/eom/slprj/sim/varcache/EOM_ECEF_6DOF/: checksumOfCache.mat  varInfo.mat
Sim/tools/matlab/Validation/eom/slprj/sim/varcache/EOM_ECEF_6DOF/tmwinternal/: simulink_cache.xml
(+12 files in other folders)
