cmake_minimum_required(VERSION 3.10)

project(6DOF_Sim VERSION 1.0
                DESCRIPTION "6DOF Sim" )

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS  "-std=c++17")
set(CMAKE_EXPORT_COMPILE_COMMANDS=ON)

list(APPEND CMAKE_PREFIX_PATH $ENV{MATHLIB_DIR})
list(APPEND CMAKE_PREFIX_PATH $ENV{PUBSUBLIB_DIR})
list(APPEND CMAKE_PREFIX_PATH $ENV{GRAMEARTH_DIR})
list(APPEND CMAKE_PREFIX_PATH $ENV{SIMLIBLIB_DIR})

find_package(Boost REQUIRED)
find_package(mathlib CONFIG REQUIRED)
find_package(PubSub CONFIG REQUIRED)
find_package(GRAM_Earth 2.0.0 CONFIG REQUIRED)
find_package(SimLib CONFIG REQUIRED)

set (LIB_TYPE SHARED) # STATIC/SHARED
string(TOLOWER ${LIB_TYPE} SEARCH_TYPE)
set_directory_properties(PROPERTIES INCLUDE_DIRECTORIES "${HDF5_INCLUDE_DIR}")
set (LINK_HDF5_LIBS ${HDF5_C_${LIB_TYPE}_LIBRARY})

add_subdirectory("SW")
add_subdirectory("Sim")